# todo-challenge

./: Dockerfile  README.md  conftest.py  pyproject.toml  tox.ini
.github/workflows/: ci_test.yml
taskinator/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
taskinator/migrations/: 0001_initial.py
todo_challenge/: settings.py  urls.py
utils/: _tests.py  datetime.py  viewsets.py
